第4作业修改

--- a/02-css.html
+++ b/02-css.html
@@ -9,17 +9,45 @@
             color:red;
             text-align: center;
         }
+        h2 {
+            font-family: 等线Light;
+        }
+        .eng {
+            font-family: Book Antiqua;
+        }
+        h1 a:link{
+            color: red;
+        }
+        h1 a:visited{
+            color: red;
+        }
+        a:link{
+            color: blueviolet;
+        }
+        a:visited{
+            color: black;
+        }
+        #location{
+            font-family: serif;
+        }
+        
     </style>
 </head>
 <body>
-<h1>HTML常用元素练习</h1>
+<h1><a  style="color: blue;" href="https://w3.org"></a>HTML常用元素练习</h1>
     <p> 
         <a href="https://www.5000yan.com/">道可道</a>，非常道。名可名，非常名。无名天地之始；有名万物之母。
-        故常无欲，以观其妙；常有欲，以观其徼。此两者，同出而异名，同谓之玄。玄之又玄，众妙之门。
+        故常，以观其妙；常有欲，以观其徼。此两者，同出而异名，同谓之玄。玄之又玄，众妙之门。
     </p>
   <p><img src="https://avatars.githubusercontent.com/u/163516572?v=4" alt=""/>
 </p>
 <ol>
+    <h2 class="eng">Douban Book+</h2>
+    <h2>好读书，也求甚解</h2>
+
+    <p>发现好书靠豆瓣，阅读好书靠DouBan Book+</p>
+
+    <h2 id="location">地点</h2>
 <li>大一</li>
 <li>大二</li>
 <li>大三</li>
