--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="01-html.html">作业1:HTML常用元素练习</a></li>
     <li><a href="02-css.html">作业2:css基础知识练习</a></li>
     <li><a href="03-css.html">作业3:在线全功能编辑器练习</a></li>
+    <li><a href="04-css.html">作业4:css盒模型、背景、文字排版</a></li>
 </ul>
 
 </body>
