--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="02-css.html">作业2:css基础知识练习</a></li>
     <li><a href="03-css.html">作业3:在线全功能编辑器练习</a></li>
     <li><a href="04-css.html">作业4:css盒模型、背景、文字排版</a></li>
+    <li><a href="07-js.html">作业7:JS基础知识</a></li>
 </ul>
 
 </body>
